--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="enfa-to-nfa.html" class="nav-item-link">
           <span class="nav-label">ε-NFA</span>
           <span class="nav-arrow">→</span>
-          <span class="nav-label">NFA</span>
+          <span class="nav-label">DFA</span>
         </a>
       </li>
       <li>
@@ -67,8 +67,8 @@
         <p>Convert Nondeterministic Finite Automata to DFA with visualization and examples.</p>
       </a>
       <a href="enfa-to-nfa.html" class="card glass">
-        <h2>ε-NFA → NFA</h2>
-        <p>Handle epsilon transitions and convert to standard NFA.</p>
+        <h2>ε-NFA → DFA</h2>
+        <p>Convert epsilon-NFA directly to DFA with visualization and examples.</p>
       </a>
       <a href="nfa-to-regex.html" class="card glass">
         <h2>NFA → RegEx</h2>
@@ -112,6 +112,7 @@
       <a href="https://www.instagram.com/imhussnain.001/" target="_blank" aria-label="Instagram" class="footer-icon-link">
         <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.7" viewBox="0 0 24 24" class="footer-icon"><rect x="2.5" y="2.5" width="19" height="19" rx="5.5"/><circle cx="12" cy="12" r="5"/><circle cx="18" cy="6" r="1.5"/></svg>
       </a>
-  <footer class="glass">© 2024 Automata Visualizer Pro</footer>
+    </span>
+  </footer>
 </body>
 </html> 
