--- a/nfa-to-dfa.html
+++ b/nfa-to-dfa.html
@@ -14,11 +14,41 @@
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="nfa-to-dfa.html" class="active">NFA → DFA</a></li>
-      <li><a href="enfa-to-nfa.html">ε-NFA → NFA</a></li>
-      <li><a href="nfa-to-regex.html">NFA → RegEx</a></li>
-      <li><a href="regex-to-nfa.html">RegEx → NFA</a></li>
-      <li><a href="toa-to-fa.html">TOA → FA</a></li>
+      <li>
+        <a href="nfa-to-dfa.html" class="nav-item-link active">
+          <span class="nav-label">NFA</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">DFA</span>
+        </a>
+      </li>
+      <li>
+        <a href="enfa-to-nfa.html" class="nav-item-link">
+          <span class="nav-label">ε-NFA</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">DFA</span>
+        </a>
+      </li>
+      <li>
+        <a href="nfa-to-regex.html" class="nav-item-link">
+          <span class="nav-label">NFA</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">RegEx</span>
+        </a>
+      </li>
+      <li>
+        <a href="regex-to-nfa.html" class="nav-item-link">
+          <span class="nav-label">RegEx</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">NFA</span>
+        </a>
+      </li>
+      <li>
+        <a href="toa-to-fa.html" class="nav-item-link">
+          <span class="nav-label">TOA</span>
+          <span class="nav-arrow">→</span>
+          <span class="nav-label">FA</span>
+        </a>
+      </li>
       <li><a href="pda-to-cfg.html">PDA → CFG</a></li>
       <li><a href="cfg-to-pda.html">CFG → PDA</a></li>
       <li><a href="tm-to-fa.html">TM → FA</a></li>
