--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
       </li>
       <li>
-        <a href="enfa-to-nfa.html" class="nav-item-link">
+        <a href="enfa-to-dfa.html" class="nav-item-link">
           <span class="nav-label">ε-NFA</span>
           <span class="nav-arrow">→</span>
           <span class="nav-label">DFA</span>
@@ -50,7 +50,7 @@
         </a>
       </li>
       <li><a href="pda-to-cfg.html">PDA → CFG</a></li>
-      <li><a href="cfg-to-pda.html">CFG → PDA</a></li>
+      <li><a href="cfl-to-cfg.html">CFL → CFG</a></li>
       <li><a href="tm-to-fa.html">TM → FA</a></li>
       <li><a href="dfa-minimizer.html">DFA Minimizer</a></li>
     </ul>
@@ -66,7 +66,7 @@
         <h2>NFA → DFA</h2>
         <p>Convert Nondeterministic Finite Automata to DFA with visualization and examples.</p>
       </a>
-      <a href="enfa-to-nfa.html" class="card glass">
+      <a href="enfa-to-dfa.html" class="card glass">
         <h2>ε-NFA → DFA</h2>
         <p>Convert epsilon-NFA directly to DFA with visualization and examples.</p>
       </a>
@@ -86,8 +86,8 @@
         <h2>PDA → CFG</h2>
         <p>Convert pushdown automata to context-free grammars.</p>
       </a>
-      <a href="cfg-to-pda.html" class="card glass">
-        <h2>CFG → PDA</h2>
+      <a href="cfl-to-cfg.html" class="card glass">
+        <h2>CFL → CFG</h2>
         <p>Convert context-free grammars to pushdown automata.</p>
       </a>
       <a href="tm-to-fa.html" class="card glass">
