--- a/enfa-to-dfa.html
+++ b/enfa-to-dfa.html
@@ -50,7 +50,7 @@
         </a>
       </li>
       <li><a href="pda-to-cfg.html">PDA → CFG</a></li>
-      <li><a href="cfg-to-pda.html">CFG → PDA</a></li>
+      <li><a href="cfl-to-cfg.html">CFL → CFG</a></li>
       <li><a href="tm-to-fa.html">TM → FA</a></li>
       <li><a href="dfa-minimizer.html">DFA Minimizer</a></li>
     </ul>
@@ -70,7 +70,6 @@
         <button id="fit-all-view" class="btn-info">Fit All Graphs</button>
       </div>
       <div class="canvas-container glass" style="margin-bottom:2rem;">
-        <div style="font-weight:bold; color:#7dd3fc; margin-bottom:0.5em;">ε-NFA Graph</div>
         <div id="enfa-graph-vis" style="width:100%;height:340px;"></div>
       </div>
       <div style="text-align:right;">
@@ -81,11 +80,11 @@
       </div>
       <div id="step-by-step" class="glass" style="margin-top:2rem; padding:1rem;">
         <h2 style="font-size:1.2rem;">Step-by-Step Explanation</h2>
-        <div id="steps-content">(Conversion steps will appear here.)</div>
+        <div id="steps-content"></div>
       </div>
       <div id="solved-examples" class="glass" style="margin-top:2rem; padding:1rem;">
         <h2 style="font-size:1.2rem;">Solved Examples</h2>
-        <div id="examples-content">(Example problems will appear here.)</div>
+        <div id="examples-content"></div>
       </div>
     </section>
   </main>
@@ -110,5 +109,47 @@
   <script src="js/visual-builder.js"></script>
   <script src="js/enfa-builder.js"></script>
   <script src="js/enfa-to-nfa.js"></script>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const examplesDiv = document.getElementById('examples-content');
+      if (!examplesDiv || !window.solvedExamples) return;
+      // Only show ENFA→DFA examples
+      const examples = window.solvedExamples.filter(ex => ex.enfa && ex.dfa);
+      if (examples.length === 0) {
+        examplesDiv.innerHTML = '<div style="color:#888">No solved examples available.</div>';
+        return;
+      }
+      examplesDiv.innerHTML = examples.map((ex, i) =>
+        `<button class="btn-secondary example-btn" data-idx="${i}">${ex.title}</button>`
+      ).join(' ');
+      examplesDiv.querySelectorAll('.example-btn').forEach(btn => {
+        btn.onclick = () => {
+          const idx = btn.getAttribute('data-idx');
+          const ex = examples[idx];
+          // Render ENFA as NFA graph (if possible)
+          if (ex.enfa) {
+            try {
+              new VisGraphRenderer('enfa-graph-vis').renderAutomaton(ex.enfa, 'enfa');
+            } catch (e) {
+              document.getElementById('enfa-graph-vis').innerHTML = '<div style="color:red">Cannot render ε-NFA as graph.</div>';
+            }
+          } else {
+            document.getElementById('enfa-graph-vis').innerHTML = '<div style="color:#888">No ε-NFA to display.</div>';
+          }
+          // Show DFA as formatted, centered text/graph
+          if (ex.dfa) {
+            try {
+              new VisGraphRenderer('dfa-graph-vis').renderAutomaton(ex.dfa, 'dfa');
+            } catch (e) {
+              document.getElementById('dfa-graph-vis').innerHTML = '<div style="color:red">Cannot render DFA as graph.</div>';
+            }
+          } else {
+            document.getElementById('dfa-graph-vis').innerHTML = '<div style="color:#888">No DFA to display.</div>';
+          }
+          document.getElementById('steps-content').innerHTML = ex.steps.map(s => `<div class='step'>${s}</div>`).join('');
+        };
+      });
+    });
+  </script>
 </body>
 </html> 
